[package]
name = "serene"
version = "0.1.0"
authors = ["Addison Crump <me@addisoncrump.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
bollard = "^0.10"
env_logger = "^0.8"
futures = "^0.3"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serenity = "^0.10"
thrussh-keys = "^0.20"
tokio = "^1.2"
toml = "^0.5"

[dev-dependencies]
thrussh = "^0.32"
