[package]
name = "serene"
version = "0.1.0"
authors = ["Addison Crump <me@addisoncrump.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bollard = "0.11"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serenity = "0.10"
thrussh-keys = "0.21"
tokio = "1.17.0"
toml = "0.5"

[dev-dependencies]
thrussh = "^0.32"
